# ramort

./: Cargo.toml  README.md
certificates/: queue_pop.cert.json
crates/cargo-ramort/: Cargo.toml
crates/cargo-ramort/src/: main.rs
crates/ramort-core/: Cargo.toml
crates/ramort-core/src/: alias_model.rs  analysis.rs  cargo_integration.rs  certificate.rs  constraints.rs  diagnostics.rs  explain.rs  expr.rs  generics.rs  interproc.rs  ir.rs  lib.rs  loop_summary.rs  lp.rs  obligation.rs  path_conditions.rs  policy.rs  ranking.rs  recurrence.rs  report.rs  summary.rs  summary_mode.rs  transition.rs
crates/ramort-frontend-rustc/: Cargo.toml
crates/ramort-frontend-rustc/src/: alias_field_sensitive.rs  call_instance.rs  lib.rs  main.rs  place_resolver.rs
crates/ramort-solver-goodlp/: Cargo.toml
crates/ramort-solver-goodlp/src/: lib.rs
examples/: fft.rs  pow.rs  qs.rs  queue.rs
summaries/: derived_cache.example.toml  std_vec.toml  trusted_std.toml
tests/: run_smoke.sh
tests/mir/: alias_cases.rs
tests/ui/: queue.expected.txt
