[package]
name = "cargo-ramort"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cargo-ramort"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ramort-core = { path = "../ramort-core" }
ramort-solver-goodlp = { path = "../ramort-solver-goodlp" }
serde_json = "1.0"
