[package]
name = "ramort-frontend-rustc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "ramort_frontend_rustc"
path = "src/lib.rs"

[[bin]]
name = "ramort-rustc"
path = "src/main.rs"

[features]
default = ["rustc-private-link"]
rustc-private-link = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ramort-core = { path = "../ramort-core" }
ramort-solver-goodlp = { path = "../ramort-solver-goodlp" }
serde_json = "1.0"

[package.metadata.rust-analyzer]
rustc_private = true
